--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -1970,11 +1970,11 @@
         "print(frase)"
       ],
       "metadata": {
-        "id": "WDSUKaPsGHgq",
-        "outputId": "8dc6df68-aa49-4769-891b-8dd18380e709",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WDSUKaPsGHgq",
+        "outputId": "8dc6df68-aa49-4769-891b-8dd18380e709"
       },
       "execution_count": 1,
       "outputs": [
@@ -1995,11 +1995,11 @@
         "print(frase2)"
       ],
       "metadata": {
-        "id": "sDw7o82XGXLP",
-        "outputId": "e96eb13c-635f-4f44-c934-8ad2b662d43f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sDw7o82XGXLP",
+        "outputId": "e96eb13c-635f-4f44-c934-8ad2b662d43f"
       },
       "execution_count": 2,
       "outputs": [
@@ -2021,11 +2021,11 @@
         "print(frase3.upper())"
       ],
       "metadata": {
-        "id": "_LyihwE5GqRr",
-        "outputId": "f80caa1a-72c5-4845-ac6d-96c82528317a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_LyihwE5GqRr",
+        "outputId": "f80caa1a-72c5-4845-ac6d-96c82528317a"
       },
       "execution_count": 3,
       "outputs": [
@@ -2047,11 +2047,11 @@
         "print(frase4.lower())"
       ],
       "metadata": {
-        "id": "pNlSqjF5G1PJ",
-        "outputId": "4fa6e005-4b3d-48ca-e459-e1f43998eb43",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pNlSqjF5G1PJ",
+        "outputId": "4fa6e005-4b3d-48ca-e459-e1f43998eb43"
       },
       "execution_count": 4,
       "outputs": [
@@ -2073,11 +2073,11 @@
         "print(frase5.strip())"
       ],
       "metadata": {
-        "id": "tolBmdjOHGTq",
-        "outputId": "d2cb653f-be69-4e95-bfbb-3a22a2dd5e42",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tolBmdjOHGTq",
+        "outputId": "d2cb653f-be69-4e95-bfbb-3a22a2dd5e42"
       },
       "execution_count": 5,
       "outputs": [
@@ -2098,11 +2098,11 @@
         "print(frase6.strip())"
       ],
       "metadata": {
-        "id": "FPlChhKRHXql",
-        "outputId": "5df4f1dd-c4ff-4f1a-c8b3-f2955a9659a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FPlChhKRHXql",
+        "outputId": "5df4f1dd-c4ff-4f1a-c8b3-f2955a9659a2"
       },
       "execution_count": 7,
       "outputs": [
@@ -2124,11 +2124,11 @@
         "print(frase7.strip().lower())"
       ],
       "metadata": {
-        "id": "yrcR8pgYHnLa",
-        "outputId": "dcf0275d-c985-4505-b7ea-76153d600f44",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yrcR8pgYHnLa",
+        "outputId": "dcf0275d-c985-4505-b7ea-76153d600f44"
       },
       "execution_count": 8,
       "outputs": [
@@ -2150,11 +2150,11 @@
         "print(frase8.replace('e','f'))"
       ],
       "metadata": {
-        "id": "fmParaVMIWIB",
-        "outputId": "a86972fd-c2e8-430b-98e6-d2083b763e5f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fmParaVMIWIB",
+        "outputId": "a86972fd-c2e8-430b-98e6-d2083b763e5f"
       },
       "execution_count": 9,
       "outputs": [
@@ -2176,11 +2176,11 @@
         "print(frase9.replace('a','@'))"
       ],
       "metadata": {
-        "id": "fM9g-9PiIsY5",
-        "outputId": "5d7323ac-3556-40a2-8f8c-c7606e0fd4a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fM9g-9PiIsY5",
+        "outputId": "5d7323ac-3556-40a2-8f8c-c7606e0fd4a7"
       },
       "execution_count": 10,
       "outputs": [
@@ -2202,11 +2202,11 @@
         "print(frase10.replace('s','$'))"
       ],
       "metadata": {
-        "id": "lRiwkjOaI2si",
-        "outputId": "3e4f03b3-cde3-425e-eb0a-12407629c479",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lRiwkjOaI2si",
+        "outputId": "3e4f03b3-cde3-425e-eb0a-12407629c479"
       },
       "execution_count": 11,
       "outputs": [
@@ -2219,6 +2219,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Fin clase 2 Manipulando datos en Python."
+      ],
+      "metadata": {
+        "id": "cDOnuXyVJgue"
+      }
     },
     {
       "cell_type": "markdown",
