--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -2438,11 +2438,11 @@
         "  print('María es menor que Beatriz.')"
       ],
       "metadata": {
-        "id": "hTSlA6V1O-PD",
-        "outputId": "b3e8a86b-63ea-4313-84a8-692c659a521a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hTSlA6V1O-PD",
+        "outputId": "b3e8a86b-63ea-4313-84a8-692c659a521a"
       },
       "execution_count": 17,
       "outputs": [
@@ -2468,11 +2468,11 @@
         "  print('La empresa 1 tiene una cantidad de empleados mayor o igual a la empresa 2.')"
       ],
       "metadata": {
-        "id": "yvkcFwhsPHwX",
-        "outputId": "d06e430b-c04a-4636-b2ea-331437d8b817",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yvkcFwhsPHwX",
+        "outputId": "d06e430b-c04a-4636-b2ea-331437d8b817"
       },
       "execution_count": 18,
       "outputs": [
@@ -2498,11 +2498,11 @@
         "  print('La empresa 1 tiene una cantidad de empleados menor o igual a la empresa 2.')"
       ],
       "metadata": {
-        "id": "Yw_Zxm4OPYAe",
-        "outputId": "8dae4878-eb11-4870-951e-982298d75606",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Yw_Zxm4OPYAe",
+        "outputId": "8dae4878-eb11-4870-951e-982298d75606"
       },
       "execution_count": 19,
       "outputs": [
@@ -2528,11 +2528,11 @@
         "  print('Los libros tienen el mismo título.')"
       ],
       "metadata": {
-        "id": "w_FH4bfdPhqB",
-        "outputId": "2daf7c68-e54b-46fd-e9af-d9b276f8dba5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "w_FH4bfdPhqB",
+        "outputId": "2daf7c68-e54b-46fd-e9af-d9b276f8dba5"
       },
       "execution_count": 20,
       "outputs": [
@@ -2558,11 +2558,11 @@
         "  print('Los libros tienen títulos diferentes.')"
       ],
       "metadata": {
-        "id": "n2cB8bF9PxmL",
-        "outputId": "e59d566b-8c5b-46c4-a82c-b361200a616f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "n2cB8bF9PxmL",
+        "outputId": "e59d566b-8c5b-46c4-a82c-b361200a616f"
       },
       "execution_count": 21,
       "outputs": [
@@ -2907,11 +2907,11 @@
         "  print('La condición es falsa')"
       ],
       "metadata": {
-        "id": "dGMhbOofVHhM",
-        "outputId": "b8ded2dd-7142-40f5-c3cc-4ad9f6eb3455",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dGMhbOofVHhM",
+        "outputId": "b8ded2dd-7142-40f5-c3cc-4ad9f6eb3455"
       },
       "execution_count": 34,
       "outputs": [
@@ -3064,11 +3064,11 @@
         "  print('El número más grande es: {}'.format(num2))"
       ],
       "metadata": {
-        "id": "luHiYXALXdMY",
-        "outputId": "959f9c0d-0c53-4f8f-be49-69789daa0f5e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "luHiYXALXdMY",
+        "outputId": "959f9c0d-0c53-4f8f-be49-69789daa0f5e"
       },
       "execution_count": 40,
       "outputs": [
@@ -3094,11 +3094,11 @@
         "  print('Hubo una disminución de {}%.'.format(porcentaje))\n"
       ],
       "metadata": {
-        "id": "G_EPtkqjX4Nl",
-        "outputId": "725f1766-13d3-424f-f77b-f768494c3df7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "G_EPtkqjX4Nl",
+        "outputId": "725f1766-13d3-424f-f77b-f768494c3df7"
       },
       "execution_count": 43,
       "outputs": [
@@ -3123,11 +3123,11 @@
         "  print('La letra {} es una consonante.'.format(letra))"
       ],
       "metadata": {
-        "id": "sZ0gRbRgYPnu",
-        "outputId": "c7971d4a-f77b-45fa-8130-6d61a9ce1862",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sZ0gRbRgYPnu",
+        "outputId": "c7971d4a-f77b-45fa-8130-6d61a9ce1862"
       },
       "execution_count": 45,
       "outputs": [
@@ -3164,11 +3164,11 @@
         "  print('Todos los valores son iguales.')\n"
       ],
       "metadata": {
-        "id": "OqP7WA5pYmir",
-        "outputId": "6a0ff9f7-016b-4956-9efd-f893b255b590",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OqP7WA5pYmir",
+        "outputId": "6a0ff9f7-016b-4956-9efd-f893b255b590"
       },
       "execution_count": 48,
       "outputs": [
@@ -3201,11 +3201,11 @@
         "  print('Todos los precios son iguales.')"
       ],
       "metadata": {
-        "id": "9w4fTrgRbUTC",
-        "outputId": "6a44ba86-1b20-4ae1-88cb-4aa6c5b41e9b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9w4fTrgRbUTC",
+        "outputId": "6a44ba86-1b20-4ae1-88cb-4aa6c5b41e9b"
       },
       "execution_count": 49,
       "outputs": [
@@ -3244,11 +3244,11 @@
         "  print('Todos los números son iguales.')"
       ],
       "metadata": {
-        "id": "LoafDRMIb2I5",
-        "outputId": "f5fb2a52-a9a3-4009-80c2-ecfcb6e50e91",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LoafDRMIb2I5",
+        "outputId": "f5fb2a52-a9a3-4009-80c2-ecfcb6e50e91"
       },
       "execution_count": 54,
       "outputs": [
@@ -3279,11 +3279,11 @@
         "  print('Valor Inválido!')"
       ],
       "metadata": {
-        "id": "YQEZ3-IQdMmW",
-        "outputId": "060a8fa9-4453-45a1-fb5e-f106cd421360",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YQEZ3-IQdMmW",
+        "outputId": "060a8fa9-4453-45a1-fb5e-f106cd421360"
       },
       "execution_count": 55,
       "outputs": [
@@ -3308,11 +3308,11 @@
         "  print('El número {} es impar.'.format(numero))"
       ],
       "metadata": {
-        "id": "-oeQZIfLdhB9",
-        "outputId": "1aa896e5-2d3b-45ee-f767-767284c3f398",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-oeQZIfLdhB9",
+        "outputId": "1aa896e5-2d3b-45ee-f767-767284c3f398"
       },
       "execution_count": 57,
       "outputs": [
@@ -3337,11 +3337,11 @@
         "  print('El número {} es decimal.'.format(numero))"
       ],
       "metadata": {
-        "id": "HVlJe42TdvPk",
-        "outputId": "644fbdff-e090-4aae-c8ba-21adc177646e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HVlJe42TdvPk",
+        "outputId": "644fbdff-e090-4aae-c8ba-21adc177646e"
       },
       "execution_count": 59,
       "outputs": [
@@ -3408,11 +3408,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "jLZ7EMkaeLsm",
-        "outputId": "bb2ebcb6-3af9-4f54-b52b-62defb52e146",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jLZ7EMkaeLsm",
+        "outputId": "bb2ebcb6-3af9-4f54-b52b-62defb52e146"
       },
       "execution_count": 60,
       "outputs": [
@@ -3466,11 +3466,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "a-9oeFFrhZoc",
-        "outputId": "f5cd9866-eb1f-4a0b-e6cf-273a2c06f5d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "a-9oeFFrhZoc",
+        "outputId": "f5cd9866-eb1f-4a0b-e6cf-273a2c06f5d7"
       },
       "execution_count": 62,
       "outputs": [
@@ -3540,11 +3540,11 @@
         "print(f'Valor a pagar por el cliente: CLP$ {valor_pagado}')"
       ],
       "metadata": {
-        "id": "ikiXUHUVi99D",
-        "outputId": "6608350b-4f0d-4906-884e-116ca47ad24e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ikiXUHUVi99D",
+        "outputId": "6608350b-4f0d-4906-884e-116ca47ad24e"
       },
       "execution_count": 65,
       "outputs": [
@@ -3591,11 +3591,11 @@
         "    print('Recorte de gastos.')\n"
       ],
       "metadata": {
-        "id": "8st7RC-tiszm",
-        "outputId": "e5906643-60ad-4af0-aa17-821b7309c56e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8st7RC-tiszm",
+        "outputId": "e5906643-60ad-4af0-aa17-821b7309c56e"
       },
       "execution_count": 67,
       "outputs": [
@@ -3609,6 +3609,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# FIN AULA 3"
+      ],
+      "metadata": {
+        "id": "PlvpoNhRl5s6"
+      }
     },
     {
       "cell_type": "markdown",
