--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -1976,7 +1976,7 @@
         "id": "WDSUKaPsGHgq",
         "outputId": "8dc6df68-aa49-4769-891b-8dd18380e709"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2001,7 +2001,7 @@
         "id": "sDw7o82XGXLP",
         "outputId": "e96eb13c-635f-4f44-c934-8ad2b662d43f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2027,7 +2027,7 @@
         "id": "_LyihwE5GqRr",
         "outputId": "f80caa1a-72c5-4845-ac6d-96c82528317a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2053,7 +2053,7 @@
         "id": "pNlSqjF5G1PJ",
         "outputId": "4fa6e005-4b3d-48ca-e459-e1f43998eb43"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2079,7 +2079,7 @@
         "id": "tolBmdjOHGTq",
         "outputId": "d2cb653f-be69-4e95-bfbb-3a22a2dd5e42"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2104,7 +2104,7 @@
         "id": "FPlChhKRHXql",
         "outputId": "5df4f1dd-c4ff-4f1a-c8b3-f2955a9659a2"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2130,7 +2130,7 @@
         "id": "yrcR8pgYHnLa",
         "outputId": "dcf0275d-c985-4505-b7ea-76153d600f44"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2156,7 +2156,7 @@
         "id": "fmParaVMIWIB",
         "outputId": "a86972fd-c2e8-430b-98e6-d2083b763e5f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2182,7 +2182,7 @@
         "id": "fM9g-9PiIsY5",
         "outputId": "5d7323ac-3556-40a2-8f8c-c7606e0fd4a7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2208,7 +2208,7 @@
         "id": "lRiwkjOaI2si",
         "outputId": "3e4f03b3-cde3-425e-eb0a-12407629c479"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2306,7 +2306,7 @@
         },
         "outputId": "664a1db1-bd69-4d66-e671-a97e24876116"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2331,7 +2331,7 @@
         },
         "outputId": "ef1f0ca9-3198-4ddc-9be4-82e377942929"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2376,7 +2376,7 @@
         },
         "outputId": "4180bb40-9755-459b-8000-5e01640b9e08"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2414,7 +2414,7 @@
         },
         "outputId": "740f676a-acce-4dd3-b86a-ef3c998d26e0"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2444,7 +2444,7 @@
         "id": "hTSlA6V1O-PD",
         "outputId": "b3e8a86b-63ea-4313-84a8-692c659a521a"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2474,7 +2474,7 @@
         "id": "yvkcFwhsPHwX",
         "outputId": "d06e430b-c04a-4636-b2ea-331437d8b817"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2504,7 +2504,7 @@
         "id": "Yw_Zxm4OPYAe",
         "outputId": "8dae4878-eb11-4870-951e-982298d75606"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2534,7 +2534,7 @@
         "id": "w_FH4bfdPhqB",
         "outputId": "2daf7c68-e54b-46fd-e9af-d9b276f8dba5"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2564,7 +2564,7 @@
         "id": "n2cB8bF9PxmL",
         "outputId": "e59d566b-8c5b-46c4-a82c-b361200a616f"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2606,7 +2606,7 @@
         },
         "outputId": "3fe09d34-e779-4b42-86bb-34658dc35dc5"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2648,7 +2648,7 @@
         },
         "outputId": "7fb6a8a3-85aa-4493-edb3-4ee8ceabe277"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2690,7 +2690,7 @@
         },
         "outputId": "12524a8c-6f31-4618-f7b3-1589f4d809aa"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2764,7 +2764,7 @@
         },
         "outputId": "83bf131a-51f1-4c55-9a09-f32d0027fead"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2842,7 +2842,7 @@
       "metadata": {
         "id": "DFKmpvmS-Pa6"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2860,7 +2860,7 @@
         },
         "outputId": "9e37189a-78a5-4ae6-c42e-1535f212aba5"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2886,7 +2886,7 @@
         },
         "outputId": "55e411de-e996-4902-a634-3cc7f8fb50fb"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2913,7 +2913,7 @@
         "id": "dGMhbOofVHhM",
         "outputId": "b8ded2dd-7142-40f5-c3cc-4ad9f6eb3455"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2976,7 +2976,7 @@
       "metadata": {
         "id": "gPPN9BCT-Mki"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2988,7 +2988,7 @@
       "metadata": {
         "id": "rLRz-N9gWx0O"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3006,7 +3006,7 @@
         },
         "outputId": "55940a68-6d3f-4f6e-b27b-3d398659b82b"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3032,7 +3032,7 @@
         },
         "outputId": "b9775853-ae90-4cc0-b073-45baf857d30a"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3070,7 +3070,7 @@
         "id": "luHiYXALXdMY",
         "outputId": "959f9c0d-0c53-4f8f-be49-69789daa0f5e"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3100,7 +3100,7 @@
         "id": "G_EPtkqjX4Nl",
         "outputId": "725f1766-13d3-424f-f77b-f768494c3df7"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3129,7 +3129,7 @@
         "id": "sZ0gRbRgYPnu",
         "outputId": "c7971d4a-f77b-45fa-8130-6d61a9ce1862"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3170,7 +3170,7 @@
         "id": "OqP7WA5pYmir",
         "outputId": "6a0ff9f7-016b-4956-9efd-f893b255b590"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3207,7 +3207,7 @@
         "id": "9w4fTrgRbUTC",
         "outputId": "6a44ba86-1b20-4ae1-88cb-4aa6c5b41e9b"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3250,7 +3250,7 @@
         "id": "LoafDRMIb2I5",
         "outputId": "f5fb2a52-a9a3-4009-80c2-ecfcb6e50e91"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3285,7 +3285,7 @@
         "id": "YQEZ3-IQdMmW",
         "outputId": "060a8fa9-4453-45a1-fb5e-f106cd421360"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3314,7 +3314,7 @@
         "id": "-oeQZIfLdhB9",
         "outputId": "1aa896e5-2d3b-45ee-f767-767284c3f398"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3343,7 +3343,7 @@
         "id": "HVlJe42TdvPk",
         "outputId": "644fbdff-e090-4aae-c8ba-21adc177646e"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3414,7 +3414,7 @@
         "id": "jLZ7EMkaeLsm",
         "outputId": "bb2ebcb6-3af9-4f54-b52b-62defb52e146"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3472,7 +3472,7 @@
         "id": "a-9oeFFrhZoc",
         "outputId": "f5cd9866-eb1f-4a0b-e6cf-273a2c06f5d7"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3546,7 +3546,7 @@
         "id": "ikiXUHUVi99D",
         "outputId": "6608350b-4f0d-4906-884e-116ca47ad24e"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3597,7 +3597,7 @@
         "id": "8st7RC-tiszm",
         "outputId": "e5906643-60ad-4af0-aa17-821b7309c56e"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3622,6 +3622,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# INICIO AULA 4"
+      ],
+      "metadata": {
+        "id": "DfZ6aXH8CvIG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Estructuras de repetición"
       ],
       "metadata": {
@@ -3641,30 +3650,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota_1 = float(input('Ingrese la nota 1: '))\n",
+        "nota_2 = float(input('Ingrese la nota 2: '))\n",
+        "print(f'El promedio del estudiante 1 es: {(nota_1 + nota_2)/2}')\n",
+        "\n",
+        "nota_1 = float(input('Ingrese la nota 1: '))\n",
+        "nota_2 = float(input('Ingrese la nota 2: '))\n",
+        "print(f'El promedio del estudiante 2 es: {(nota_1 + nota_2)/2}')\n",
+        "\n",
+        "nota_1 = float(input('Ingrese la nota 1: '))\n",
+        "nota_2 = float(input('Ingrese la nota 2: '))\n",
+        "print(f'El promedio del estudiante 3 es: {(nota_1 + nota_2)/2}')"
+      ],
       "metadata": {
-        "id": "xcx21IGT9qA0"
+        "id": "xcx21IGT9qA0",
+        "outputId": "4242d669-8ea8-4492-c74c-0a59b71cffa4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Wtbiy9Ay9rGJ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Yfyz4anY9rIr"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese la nota 1: 6.5\n",
+            "Ingrese la nota 2: 6.9\n",
+            "El promedio del estudiante 1 es: 6.7\n",
+            "Ingrese la nota 1: 7.8\n",
+            "Ingrese la nota 2: 8.9\n",
+            "El promedio del estudiante 2 es: 8.35\n",
+            "Ingrese la nota 1: 8.7\n",
+            "Ingrese la nota 2: 3.1\n",
+            "El promedio del estudiante 3 es: 5.8999999999999995\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3706,21 +3729,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "contador = 1\n",
+        "while contador <=10:\n",
+        "  print(contador)\n",
+        "  # contador = contador + 1\n",
+        "  contador += 1"
+      ],
       "metadata": {
-        "id": "Hd0ZSWxD9wCD"
+        "id": "Hd0ZSWxD9wCD",
+        "outputId": "68caca42-1b61-40c9-8de9-15c705dbe978",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "miFHNqp29nOL"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3733,21 +3774,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "contador = 1\n",
+        "while contador <= 3:\n",
+        "  nota_1 = float(input('Ingrese la nota 1: '))\n",
+        "  nota_2 = float(input('Ingrese la nota 2: '))\n",
+        "  print(f'El promedio del estudiante {contador} es: {(nota_1 + nota_2)/2}')\n",
+        "  contador += 1"
+      ],
       "metadata": {
-        "id": "9T5eCLFx9wk6"
+        "id": "9T5eCLFx9wk6",
+        "outputId": "d8967264-ca5b-4387-c874-e3c05ab99eff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "P6E0_dW-9lZ9"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese la nota 1: 8\n",
+            "Ingrese la nota 2: 5.5\n",
+            "El promedio del estudiante 1 es: 6.75\n",
+            "Ingrese la nota 1: 9.8\n",
+            "Ingrese la nota 2: 9.2\n",
+            "El promedio del estudiante 2 es: 9.5\n",
+            "Ingrese la nota 1: 10\n",
+            "Ingrese la nota 2: 9.1\n",
+            "El promedio del estudiante 3 es: 9.55\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3805,21 +3864,70 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for n in range(1,11):\n",
+        "  print(n)"
+      ],
       "metadata": {
-        "id": "KkL1wUIj9jL4"
+        "id": "KkL1wUIj9jL4",
+        "outputId": "96327b09-4525-44ea-e13a-1a641e3d5f22",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for e in range(1,4):\n",
+        "  nota_1 = float(input('Ingrese la nota 1: '))\n",
+        "  nota_2 = float(input('Ingrese la nota 2: '))\n",
+        "  print(f'El promedio del estudiante es: {(nota_1 + nota_2)/2}')"
+      ],
       "metadata": {
-        "id": "uXIZnLSr9jOu"
+        "id": "uXIZnLSr9jOu",
+        "outputId": "2388443a-e290-45aa-ae4a-608e2c599488",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese la nota 1: 8.5\n",
+            "Ingrese la nota 2: 7\n",
+            "El promedio del estudiante es: 7.75\n",
+            "Ingrese la nota 1: 4.6\n",
+            "Ingrese la nota 2: 6.3\n",
+            "El promedio del estudiante es: 5.449999999999999\n",
+            "Ingrese la nota 1: 5.9\n",
+            "Ingrese la nota 2: 10\n",
+            "El promedio del estudiante es: 7.95\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
