--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -3670,7 +3670,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3743,7 +3743,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3789,7 +3789,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3875,7 +3875,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3910,7 +3910,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3925,6 +3925,460 @@
             "Ingrese la nota 1: 5.9\n",
             "Ingrese la nota 2: 10\n",
             "El promedio del estudiante es: 7.95\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Entrenando la programación"
+      ],
+      "metadata": {
+        "id": "6yc42SXnptvS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1 - Escribe un programa que solicite dos números enteros e imprima todos los números enteros entre ellos.\n",
+        "num1 = int(input('Ingrese el primer número: '))\n",
+        "num2 = int(input('Ingrese el segundo número: '))\n",
+        "while num1 < num2:\n",
+        "  print(num1)\n",
+        "  num1 += 1\n"
+      ],
+      "metadata": {
+        "id": "XB73eq1IpzK7",
+        "outputId": "1fab984c-44b9-4838-f982-4279992fd309",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el primer número: 8\n",
+            "Ingrese el segundo número: 15\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "11\n",
+            "12\n",
+            "13\n",
+            "14\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "2 - Escribe un programa para calcular cuántos días tomará que la colonia de una bacteria A supere o iguale a la colonia de una bacteria B,\n",
+        "basado en tasas de crecimiento del 3% y 1.5%, respectivamente.\n",
+        "Supón que la colonia A comienza con 4 elementos y B con 10.\n",
+        "\n",
+        "\"\"\"\n",
+        "colA = 4\n",
+        "colB = 10\n",
+        "dias = 0\n",
+        "while colA < colB:\n",
+        "  colA *= 1.03\n",
+        "  colB *= 1.015\n",
+        "  dias += 1\n",
+        "print('Tomará {} días para que la colonia A supere a la colonia B.'.format(dias))"
+      ],
+      "metadata": {
+        "id": "bNMtX133rBc-",
+        "outputId": "2bacd451-e52a-4024-cacd-3367018228b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tomará 63 días para que la colonia A supere a la colonia B.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "3 - Para procesar una cantidad de 15 datos de evaluaciones de usuarios de un servicio de la empresa, necesitamos verificar si las calificaciones son válidas.\n",
+        "Por lo tanto, escribe un programa que recibirá calificaciones del 0 al 5 y verificará si son valores válidos.\n",
+        "Si se ingresa una calificación superior a 5 o inferior a 0, se repetirá hasta que el usuario ingrese un valor válido.\n",
+        "\n",
+        "\"\"\"\n",
+        "calificacion = int(input('Ingrese una calificación del 0 al 5: '))\n",
+        "while calificacion < 0 or calificacion > 5:\n",
+        "  print('La calificación ingresada no es válida.')\n",
+        "  calificacion = int(input('Ingrese una calificación del 0 al 5: '))\n",
+        "print('La calificación ingresada es válida.')"
+      ],
+      "metadata": {
+        "id": "2kQQMPlXsEUO",
+        "outputId": "bbdff42f-e371-4cc8-94a3-bc5b2b25eece",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese una calificación del 0 al 5: 7\n",
+            "La calificación ingresada no es válida.\n",
+            "Ingrese una calificación del 0 al 5: 4\n",
+            "La calificación ingresada es válida.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "4 - Desarrolla un programa que lea un conjunto indefinido de temperaturas en grados Celsius y calcule su promedio.\n",
+        "La lectura debe detenerse al ingresar el valor -273°C.\n",
+        "\n",
+        "\"\"\"\n",
+        "temperatura = float(input('Ingrese una temperatura en grados Celsius: '))\n",
+        "suma = 0\n",
+        "contador = 0\n",
+        "while temperatura != -273:\n",
+        "  suma += temperatura\n",
+        "  contador += 1\n",
+        "  temperatura = float(input('Ingrese una temperatura en grados Celsius: '))\n",
+        "promedio = suma / contador\n",
+        "print('El promedio de las temperaturas ingresadas es: {}'.format(promedio))\n"
+      ],
+      "metadata": {
+        "id": "s4pJ6mPDwJq9",
+        "outputId": "38bc2442-87dc-412b-97bd-791f5d7bbec6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese una temperatura en grados Celsius: 155\n",
+            "Ingrese una temperatura en grados Celsius: 255\n",
+            "Ingrese una temperatura en grados Celsius: 288\n",
+            "Ingrese una temperatura en grados Celsius: 300\n",
+            "Ingrese una temperatura en grados Celsius: 210\n",
+            "Ingrese una temperatura en grados Celsius: 85\n",
+            "Ingrese una temperatura en grados Celsius: -273\n",
+            "El promedio de las temperaturas ingresadas es: 215.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "5 - Escribe un programa que calcule el factorial de un número entero proporcionado por el usuario.\n",
+        "Recuerda que el factorial de un número entero es el producto de ese número por todos sus antecesores hasta llegar al número\n",
+        "1. Por ejemplo, el factorial de 5 es 5 x 4 x 3 x 2 x 1 = 120.\n",
+        "\n",
+        "\"\"\"\n",
+        "numero = int(input('Ingrese un número entero: '))\n",
+        "factorial = 1\n",
+        "while numero > 0:\n",
+        "  factorial *= numero\n",
+        "  numero -= 1\n",
+        "print('El factorial del número ingresado es: {}'.format(factorial))"
+      ],
+      "metadata": {
+        "id": "Ww5cqXhPxtfn",
+        "outputId": "1d045bd5-1d03-4cfa-b560-3f84df4f5784",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un número entero: 5\n",
+            "El factorial del número ingresado es: 120\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Momento de los proyectos"
+      ],
+      "metadata": {
+        "id": "PN-031Evyzn0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 6 - Escribe un programa que genere la tabla de multiplicar de un número entero del 1 al 10, según la elección del usuario.Como ejemplo, para el número 2, la tabla de multiplicar debe mostrarse en el siguiente formato:\n",
+        "\"\"\"\n",
+        "Tabla de multiplicar del 2:\n",
+        "2 x 1 = 2\n",
+        "2 x 2 = 4\n",
+        "[...]\n",
+        "2 x 10 = 20\n",
+        "\n",
+        "\"\"\"\n",
+        "numero = int(input('Ingrese un número entero: '))\n",
+        "print('Tabla de multiplicar del {}:'.format(numero))\n",
+        "for i in range(1,11):\n",
+        "  print('{} x {} = {}'.format(numero, i, numero*i))\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "XgrNZDWPy2nm",
+        "outputId": "be523743-8367-4efc-f417-979ce903fe1e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un número entero: 8\n",
+            "Tabla de multiplicar del 8:\n",
+            "8 x 1 = 8\n",
+            "8 x 2 = 16\n",
+            "8 x 3 = 24\n",
+            "8 x 4 = 32\n",
+            "8 x 5 = 40\n",
+            "8 x 6 = 48\n",
+            "8 x 7 = 56\n",
+            "8 x 8 = 64\n",
+            "8 x 9 = 72\n",
+            "8 x 10 = 80\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "7 - Los números primos tienen diversas aplicaciones en Ciencia de Datos, como en criptografía y seguridad.\n",
+        "Un número primo es aquel que es divisible solo por sí mismo y por\n",
+        "1. Por lo tanto, crea un programa que solicite un número entero y determine si es un número primo o no.\n",
+        "\n",
+        "\"\"\"\n",
+        "numero = int(input('Ingrese un número entero: '))\n",
+        "contador = 0\n",
+        "for i in range(1,numero+1):\n",
+        "  if numero % i == 0:\n",
+        "    contador += 1\n",
+        "if contador == 2:\n",
+        "  print('El número {} es primo.'.format(numero))\n",
+        "else:\n",
+        "  print('El número {} no es primo.'.format(numero))\n"
+      ],
+      "metadata": {
+        "id": "OiXc4QJV1vXz",
+        "outputId": "0629386d-e82f-47d3-ad2a-4cd93c3c5c52",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un número entero: 1\n",
+            "El número 1 no es primo.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "8 - Vamos a comprender la distribución de edades de los pensionistas de una empresa de seguros.\n",
+        "Escribe un programa que lea las edades de una cantidad no informada de clientes y muestre la distribución en los intervalos [0-25], [26-50], [51-75] y [76-100].\n",
+        "La entrada de datos se detendrá al ingresar un número negativo.\n",
+        "\"\"\"\n",
+        "# Recopilamos las edades de los clientes\n",
+        "edad = int(input('Ingresa la edad (o un número negativo para finalizar): '))\n",
+        "\n",
+        "# Inicializamos las variables de conteo\n",
+        "contador_0_25 = 0 # contador de edades entre 0 y 25\n",
+        "contador_26_50 = 0 # contador de edades entre 26 y 50\n",
+        "contador_51_75 = 0 # contador de edades entre 51 y 75\n",
+        "contador_76_100 = 0 # contador de edades entre 76 y 100\n",
+        "\n",
+        "# Nuestro código se ejecuta hasta que el valor de edad sea negativo\n",
+        "while edad >= 0:\n",
+        "    # Contamos cada caso\n",
+        "    if edad >= 0 and edad <= 25:\n",
+        "        contador_0_25 += 1\n",
+        "    elif edad >= 26 and edad <= 50:\n",
+        "        contador_26_50 += 1\n",
+        "    elif edad >= 51 and edad <= 75:\n",
+        "        contador_51_75 += 1\n",
+        "    elif edad >= 76 and edad <= 100:\n",
+        "        contador_76_100 += 1\n",
+        "\n",
+        "    # Repetimos el proceso de entrada de datos hasta que se ingrese un número negativo\n",
+        "    edad = int(input('Ingresa la edad (o un número negativo para finalizar): '))\n",
+        "\n",
+        "# Mostramos los resultados\n",
+        "print('Distribución de edades:')\n",
+        "print('[0-25]:', contador_0_25)\n",
+        "print('[26-50]:', contador_26_50)\n",
+        "print('[51-75]:', contador_51_75)\n",
+        "print('[76-100]:', contador_76_100)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "yrRpAP-d3YG1",
+        "outputId": "3e8901cf-6eb1-433a-de1b-24fbeefe8b8f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingresa la edad (o un número negativo para finalizar): 12\n",
+            "Ingresa la edad (o un número negativo para finalizar): 34\n",
+            "Ingresa la edad (o un número negativo para finalizar): 71\n",
+            "Ingresa la edad (o un número negativo para finalizar): 98\n",
+            "Ingresa la edad (o un número negativo para finalizar): 45\n",
+            "Ingresa la edad (o un número negativo para finalizar): 64\n",
+            "Ingresa la edad (o un número negativo para finalizar): -3\n",
+            "Distribución de edades:\n",
+            "[0-25]: 1\n",
+            "[26-50]: 2\n",
+            "[51-75]: 2\n",
+            "[76-100]: 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "9 - En una elección para la gerencia de una empresa con 20 empleados, hay cuatro candidatos.\n",
+        "Escribe un programa que calcule al ganador de la elección. La votación se realizó de la siguiente manera:\n",
+        "\n",
+        "Cada empleado votó por uno de los cuatro candidatos (representados por los números 1, 2, 3 y 4).\n",
+        "\n",
+        "También se contaron los votos nulos (representados por el número 5) y los votos en blanco (representados por el número 6).\n",
+        "\n",
+        "Al final de la votación, el programa debe mostrar el número total de votos para cada candidato, los votos nulos y los votos en blanco. Además, debe calcular y mostrar el porcentaje de votos nulos con respecto al total de votos y el porcentaje de votos en blanco con respecto al total de votos.\n",
+        "\n",
+        "Si necesitas ayuda, las soluciones a las actividades están disponibles en la sección \"Opinión del instructor\".\n",
+        "\n",
+        "\"\"\"\n",
+        "# Inicializamos las variables contadoras\n",
+        "votos_candidato1 = 0\n",
+        "votos_candidato2 = 0\n",
+        "votos_candidato3 = 0\n",
+        "votos_candidato4 = 0\n",
+        "votos_nulos = 0\n",
+        "votos_blanco = 0\n",
+        "\n",
+        "# Inicio del bucle para leer los votos\n",
+        "for i in range(0, 20):\n",
+        "    voto = int(input('Ingresa tu voto: '))\n",
+        "    if voto == 1:\n",
+        "        votos_candidato1 += 1\n",
+        "    elif voto == 2:\n",
+        "        votos_candidato2 += 1\n",
+        "    elif voto == 3:\n",
+        "        votos_candidato3 += 1\n",
+        "    elif voto == 4:\n",
+        "        votos_candidato4 += 1\n",
+        "    elif voto == 5:\n",
+        "        votos_nulos += 1\n",
+        "    elif voto == 6:\n",
+        "        votos_blanco += 1\n",
+        "    else:\n",
+        "        print(\"Voto inválido.\")\n",
+        "\n",
+        "print(f'Votos candidato 1: {votos_candidato1}')\n",
+        "print(f'Votos candidato 2: {votos_candidato2}')\n",
+        "print(f'Votos candidato 3: {votos_candidato3}')\n",
+        "print(f'Votos candidato 4: {votos_candidato4}')\n",
+        "print(f'Votos nulos: {votos_nulos}')\n",
+        "print(f'Votos en blanco: {votos_blanco}')\n",
+        "print(f'Porcentaje de votos nulos: {(votos_nulos / 20 * 100)}')\n",
+        "print(f'Porcentaje de votos en blanco: {(votos_blanco / 20 * 100)}')"
+      ],
+      "metadata": {
+        "id": "kbiULOdk55ia",
+        "outputId": "80459687-e1d6-490f-a353-f84f62f407d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingresa tu voto: 2\n",
+            "Ingresa tu voto: 4\n",
+            "Ingresa tu voto: 5\n",
+            "Ingresa tu voto: 6\n",
+            "Ingresa tu voto: 5\n",
+            "Ingresa tu voto: 4\n",
+            "Ingresa tu voto: 4\n",
+            "Ingresa tu voto: 4\n",
+            "Ingresa tu voto: 4\n",
+            "Ingresa tu voto: 2\n",
+            "Ingresa tu voto: 2\n",
+            "Ingresa tu voto: 1\n",
+            "Ingresa tu voto: 4\n",
+            "Ingresa tu voto: 5\n",
+            "Ingresa tu voto: 4\n",
+            "Ingresa tu voto: 2\n",
+            "Ingresa tu voto: 2\n",
+            "Ingresa tu voto: 3\n",
+            "Ingresa tu voto: 3\n",
+            "Ingresa tu voto: 3\n",
+            "Votos candidato 1: 1\n",
+            "Votos candidato 2: 5\n",
+            "Votos candidato 3: 3\n",
+            "Votos candidato 4: 7\n",
+            "Votos nulos: 3\n",
+            "Votos en blanco: 1\n",
+            "Porcentaje de votos nulos: 15.0\n",
+            "Porcentaje de votos en blanco: 5.0\n"
           ]
         }
       ]
